--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,15 +7,15 @@
 <link rel="stylesheet" type="text/css" href="/css/dataTables.bootstrap.min.css">
 <link rel="stylesheet" href="/css/jquery.dataTables.min.css">
 
-<h1>Welcome to Life Care Hospital Management System</h1>
+
+<br>
 <br>
 
 
-
 <div class="row">
-   
+    <a href="app/PatientRegisterSection">
         <div class="col-lg-4 col-md-4">
-            <div class="panel panel-yellow">
+            <div class="panel panel-orange">
                 <div class="panel-heading" id="patientsInRooms">
                     <div class="row">
                         <div class="col-xs-3">
@@ -28,8 +28,9 @@
                     </div>
                 </div>
             </div>
-    
+    </a>
 </div>
+
 
 <div class="col-lg-4 col-md-4">
     <div class="panel panel-green">
@@ -64,9 +65,9 @@
 </div>
 </div>
 <div class="row">
-    <a href="app/registration">
+    <a href="app/PatientRegisterSection">
         <div class="col-lg-4 col-md-4">
-            <div class="panel panel-red">
+            <div class="panel panel-orange">
                 <div class="panel-heading" id="patientsInRooms">
                     <div class="row">
                         <div class="col-xs-3">
@@ -74,7 +75,7 @@
                         </div>
                         <div class="col-xs-9 text-right">
                             <div id="patients-with-rooms-live" class="huge"></div>
-                            <div> Patient Registration</div>
+                            <div> Patient Register</div>
                         </div>
                     </div>
                 </div>
@@ -83,8 +84,28 @@
 </div>
 
 <div class="col-lg-4 col-md-4">
-    <a href="app/registered">
-        <div class="panel panel-red">
+    
+   <a href="app/DoctorSection">
+        <div class="panel panel-green">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-group fa-5x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div id="patients-waiting-live" class="huge"></div>
+                    <div>Manage Doctors</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
+</div>
+
+<div class="col-lg-4 col-md-4">
+    
+    <a href="app/PatientRegisteredSection">
+        <div class="panel panel-info">
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
@@ -100,8 +121,9 @@
     </a>
 </div>
 
+
 <div class="col-lg-4 col-md-4">
-    <a href="app/manageroom">
+    <a href="app/RoomSection">
         <div class="panel panel-orange">
             <div class="panel-heading" id="freeRooms">
                 <div class="row">
@@ -110,7 +132,7 @@
                     </div>
                     <div class="col-xs-9 text-right">
                         <div id="free-rooms-live" class="huge"></div>
-                        <div>Manage room</div>
+                        <div>Manage Room</div>
                     </div>
                 </div>
             </div>
@@ -118,24 +140,8 @@
 </div>
 </a>
 </div>
-<div class="row">
-    <a href="app/manage_disease">
-        <div class="col-lg-4 col-md-4">
-            <div class="panel panel-primary">
-                <div class="panel-heading" id="patientsInRooms">
-                    <div class="row">
-                        <div class="col-xs-3">
-                            <i class="fa fa-pie-chart fa-5x"></i>
-                        </div>
-                        <div class="col-xs-9 text-right">
-                            <div id="patients-with-rooms-live" class="huge"></div>
-                            <div>Manage disease</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </a>
-</div>
+
+
 
 
 
