--- a/views/patientPage.handlebars
+++ b/views/patientPage.handlebars
@@ -14,7 +14,7 @@
                         </div>
                         <div class="col-xs-9 text-right">
                             <div id="patient-score" class="huge"></div>
-                            <div>Patient score</div>
+                            <div>Patient Ward</div>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
 
 
             <div class="form-group row">
-                <label class="col-sm-3 col-md-3 col-lg-3 col-form-label">Contact no.</label>
+                <label class="col-sm-3 col-md-3 col-lg-3 col-form-label">NIC</label>
                 <div class="col-sm-9 col-md-9 col-lg-9">
                     <input class="form-control" style="width: 100%;" id="hospitalNumber-disabled" type="text" disabled>
                 </div>
